reduce global_store auto-saves in tester/benchmarker, renamed has_more/expanded/collapsed styles and separated truncated class to avoid flicker during script execution due to height-changing styles depending on expandable state

--- a/util/core.css
+++ b/util/core.css
@@ -66,7 +66,7 @@
   margin-top: 1px;
 }
 
-.core_js_table .function.expand {
+.core_js_table .function.expanded {
   margin-top: 5px;
 }
 
@@ -160,12 +160,12 @@
   display: inline;
 }
 
-/* change cursor on expandable descriptions (w/ .more/.less)*/
-.core_js_table .function:is(.expandable, .expand) {
+/* change cursor on .has_more descriptions (w/ .more/.less)*/
+.core_js_table .function:is(.has_more, .truncated, .expanded) {
   cursor: pointer;
 }
 
-/* style more indicator on expandable desc */
+/* style more indicator */
 .core_js_table .more-indicator {
   /* display: block; */
   /* position: absolute; */
@@ -184,17 +184,17 @@
 .core_js_table .more {
   display: none;
 }
-.core_js_table .function.expand .more,
-.container.pushable .core_js_table .function.expandable:not(.collapse) .more {
+.core_js_table .function.expanded .more,
+.container.pushable .core_js_table .function.has_more:not(.collapsed) .more {
   display: block;
 }
-.core_js_table .function.expand .less,
-.container.pushable .core_js_table .function.expandable:not(.collapse) .less {
+.core_js_table .function.expanded .less,
+.container.pushable .core_js_table .function.has_more:not(.collapsed) .less {
   display: none;
 }
 /* add background and bottom margin to expanded .desc */
-.core_js_table .function.expand .desc,
-.container.pushable .core_js_table .function.expandable:not(.collapse) .desc {
+.core_js_table .function.expanded .desc,
+.container.pushable .core_js_table .function.has_more:not(.collapsed) .desc {
   display: block;
   white-space: normal;
   background: #171717;
@@ -205,8 +205,8 @@
   border-left: var(--bullet-width) solid #444;
 }
 /* enable wrapping on expanded .usage */
-.core_js_table .function.expand .usage,
-.container.pushable .core_js_table .function.expandable:not(.collapse) .usage {
+.core_js_table .function.expanded .usage,
+.container.pushable .core_js_table .function.has_more:not(.collapsed) .usage {
   white-space: pre-wrap;
   width: auto;
   background: #222;
